--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -17,19 +17,19 @@
     "not_authz_to_create_attr_value": "Not authorized to create one of the values of attribute type {{type}}.",
     "unrecognized_attribute_type": "Unrecognized attribute types: {{oids}}.",
     "unrecognized_object_class": "Unrecognized object class {{oid}}.",
-    "missing_mandatory_attributes": "Missing mandatory attributes.",
+    "missing_mandatory_attributes": "Missing mandatory attribute(s): {{oids}}",
     "rdn_types_duplicated": "Attributes of the following types in the RDN of the entry were duplicated: {{oids}}.",
     "rdn_types_unrecognized": "Attributes of the following types in the RDN of the entry were unrecognized by the performing DSA: {{oids}}.",
     "rdn_types_prohibited_in_naming": "Attributes of the following types are not permitted for naming purposes: {{oids}}.",
     "rdn_values_not_present_in_entry": "Values present in the RDN are missing from the entry.",
     "no_dit_structural_rules": "Entry not permitted here because there are no DIT structural rules that allow it.",
-    "aux_oc_not_permitted_by_dit_content_rule": "Auxiliary object class {{oid}} prohibited by DIT content rule for structural object class {{oid}}.",
-    "attr_type_precluded": "Attribute type {{oid}} precluded by relevant DIT content rules.",
+    "aux_oc_not_permitted_by_dit_content_rule": "Auxiliary object class {{aoc}} prohibited by DIT content rule for structural object class {{soc}}.",
+    "attr_type_precluded": "Attribute type {{oid}} precluded by the DIT content rule for structural object class {{soc}}.",
     "first_level_entries_must_be_admpoint": "First-level entries must be administrative points.",
     "dit_content_rule_missing_mandatory_attributes": "Missing the following mandatory attributes, which are required by the relevant DIT content rules for structural object class {{soc}}: {{oids}}.",
     "aux_oc_forbidden_because_no_dit_content_rules": "Auxiliary object classes {{oids}} are forbidden entirely, because there are no relevant DIT content rules defined for structural object class {{soc}}.",
-    "no_contexts_permitted": "No contexts are permitted due to an absence of DIT context use rules.",
-    "context_type_prohibited_by_context_use_rule": "Context type {{oid}} prohibited by DIT context use rule for attribute type {{oid}}.",
+    "no_contexts_permitted": "No contexts are permitted for attribute type {{oid}} due to an absence of DIT context use rules.",
+    "context_type_prohibited_by_context_use_rule": "Context type {{ct}} prohibited by DIT context use rule for attribute type {{at}}.",
     "missing_required_context_types": "Missing the following context types that are required by context use rule for attribute type {{attr}}: {{oids}}.",
     "missing_managedsait_flag": "The following operational attributes may not be managed without setting the manageDSAIT flag: {{oids}}.",
     "abandoned": "Abandoned.",
@@ -59,9 +59,9 @@
     "new_superior_not_within_this_dsa": "Target entry's new superior is not within this DSA.",
     "not_authz_import": "Not authorized to import this entry.",
     "entry_has_external_subordinates": "Target entry cannot be moved because it has subordinates that are external to this DSA.",
-    "subentry_not_child_of_admpoint": "Subentry was not a child of an administrative point.",
+    "subentry_not_child_of_admpoint": "Subentry {{uuid}} was not a child of an administrative point.",
     "rdn_attribute_type_requires_contexts": "Attribute type {{oid}} cannot be used in the target entry's new name, because the context use rules for that type mandate the existence of the following context types: {{oids}}.",
-    "attribute_type_not_permitted_by_oc": "Attribute type {{oid}} not permitted by the entry's object classes.",
+    "attribute_type_not_permitted_by_oc": "Attribute types {{oids}} not permitted by the entry's object classes.",
     "deleting_old_rdn_deletes_required_attribute": "Deleting the old RDN would delete a required attribute.",
     "not_authz_mod": "Not authorized to perform modification {{mod}}.",
     "no_user_modification": "Attribute type {{oid}} may never be modified, even by administrators.",
@@ -90,5 +90,13 @@
     "hob_contextprefixinfo_did_not_match": "Operational binding contextPrefixInfo did not match immediateSuperior.",
     "ob_rejected": "Operational binding rejected.",
     "unrecognized_ob_initiator_syntax": "Operational binding initiator syntax unrecognized.",
-    "no_ob_with_id": "No operational binding with identifier {{id}}."
+    "no_ob_with_id": "No operational binding with identifier {{id}}.",
+    "can_only_list_or_search_root": "Only a list or search operation may target the root DSE.",
+    "unable_to_proceed": "Unable to proceed.",
+    "invalid_reference": "Invalid reference.",
+    "could_not_resolve_name_on_master": "Could not resolve name on master.",
+    "reached_alias_above_target": "Reached an alias above the target object, and dereferencing was prohibited.",
+    "reached_subentry_above_target": "Reached a subentry above the target object. The object could not possibly exist.",
+    "hierarchy_selections_not_supported": "Hierarchy selections not supported by this DSA.",
+    "no_such_superior": "No such superior or not authorized to know about it."
 }
