--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -8,6 +8,7 @@
     "transport_established": "{{source}}: {{transport}} transport established.",
     "connection_bound_auth": "{{source}}: {{protocol}} connection bound. Authenticated as {{dn}}.",
     "connection_bound_anon": "{{source}}: {{protocol}} connection bound anonymously.",
+    "bind_error": "{{ctype}} {{cid}}: Error during DAP bind operation from {{source}}: {{e}}",
     "double_bind_attempted": "{{source}} tried to double bind with protocol {{protocol}}.",
     "unsupported_protocol": "Unsupported protocol: {{protocol}}.",
     "unhandled_exception": "Unhandled exception: {{e}}",
@@ -30,10 +31,10 @@
     "failed_to_update_hob": "Failed to update HOB for agreement {{obid}} (version {{version}}): {{e}}",
     "dsa_returned_no_opcode": "DSA '{{dsa}}' returned a result with no opCode, which might have been malicious.",
     "could_not_write_operation_to_dsa": "Could not write operation to DSA '{{dsa}}'.",
-    "failed_to_access_master": "Failed to access master access point: {{e}}",
+    "failed_to_access_master": "Failed to access master access point {{dsa}}: {{e}}",
     "shadow_not_under_cp": "DIT invalid: shadow DSE {{id}} not under a context prefix.",
     "could_not_decode_ldap_attribute": "Could not decode LDAP attribute type {{desc}}: {{e}}",
-    "failed_to_delete_old_rdn": "Failed to delete old RDN value having type {{oid}}.",
+    "failed_to_delete_old_rdn": "Failed to delete old RDN value having type {{oid}} for entry {{uuid}}.",
     "entry_deleted_while_being_modified": "Database entry {{id}} was deleted while it was being modified.",
     "loading_dit": "Loading DIT into memory. This could take a while.",
     "no_root_dse": "No root DSE found. Creating it.",
