--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -40,5 +40,6 @@
     "no_root_dse": "No root DSE found. Creating it.",
     "created_root_dse": "Created root DSE {{uuid}}.",
     "dit_loaded": "DIT loaded into memory.",
-    "malformed_ldapmessage": "Malformed LDAPMessage."
+    "malformed_ldapmessage": "Malformed LDAPMessage.",
+    "entry_has_unrecognized_object_class": "Entry has unrecognized object class {{oid}}. It's required and optional attributes cannot be known."
 }
