--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -41,5 +41,7 @@
     "created_root_dse": "Created root DSE {{uuid}}.",
     "dit_loaded": "DIT loaded into memory.",
     "malformed_ldapmessage": "Malformed LDAPMessage.",
-    "entry_has_unrecognized_object_class": "Entry has unrecognized object class {{oid}}. It's required and optional attributes cannot be known."
+    "entry_has_unrecognized_object_class": "Entry has unrecognized object class {{oid}}. It's required and optional attributes cannot be known.",
+    "password_changed": "Connection {{cid}} changed the password for entry {{uuid}}.",
+    "change_password_incorrect": "Connection {{cid}} supplied an incorrect password to changePassword operation on entry {{uuid}}."
 }
