--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -102,5 +102,6 @@
     "no_such_superior": "No such superior or not authorized to know about it.",
     "cannot_add_dummy_attr": "The following attributes are dummy attribute types, and therefore may not be added to an entry: {{oids}}",
     "cannot_add_collective_attr": "The following attributes are collective attribute types, and therefore may not be added to a non-subentry: {{oids}}",
-    "cannot_add_obsolete_attr": "The following attributes are obsolete, and therefore may not be added to an entry: {{oids}}"
+    "cannot_add_obsolete_attr": "The following attributes are obsolete, and therefore may not be added to an entry: {{oids}}",
+    "only_one_sort_key": "Sorted search and list operations may only use one sort key in this DSA."
 }
