--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -104,5 +104,6 @@
     "cannot_add_collective_attr": "The following attributes are collective attribute types, and therefore may not be added to a non-subentry: {{oids}}",
     "cannot_add_obsolete_attr": "The following attributes are obsolete, and therefore may not be added to an entry: {{oids}}",
     "only_one_sort_key": "Sorted search and list operations may only use one sort key in this DSA.",
-    "unsupported_familygrouping": "Unsupported familyGrouping option."
+    "unsupported_familygrouping": "Unsupported familyGrouping option.",
+    "child_cannot_be_in_hierarchy": "Child member of a compound entry may not be in a hierarchical group."
 }
