--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -18,7 +18,12 @@
     "listening": "{{protocol}} server listening on port {{port}}.",
     "killed_by_sentinel": "Killed by sentinel. This likely means that there was a security vulnerability discovered in Meerkat DSA. Please check the Meerkat DSA website for information. To disable this killswitch (and start up Meerkat despite there possibly being a severe security vulnerability), please restart Meerkat DSA with the MEERKAT_SENTINEL_DOMAIN environment variable set to an empty string.",
     "hibernated_by_sentinel": "Hibernation triggered by sentinel. This likely means that there was a security vulnerability discovered in Meerkat DSA. Please check the Meerkat DSA website for information. To disable this killswitch (and start up Meerkat despite there possibly being a severe security vulnerability), please restart Meerkat DSA with the MEERKAT_SENTINEL_DOMAIN environment variable set to an empty string or open the Meerkat DSA administrative console in your web browser and un-hibernate this DSA.",
-    "update_available": "An update is available for Meerkat DSA.",
+    "major_version_insecure": "Your version of Meerkat DSA is insecure. Please update to the next major version.",
+    "major_version_deprecated": "Your version of Meerkat DSA is no longer supported. Please consider updating to the next major version.",
+    "security_update_available": "Your version of Meerkat DSA is insecure. Please update to version {{version}} or later.",
+    "major_update_available": "A major update is available for Meerkat DSA.",
+    "minor_update_available": "A minor update ({{version}}) is available for Meerkat DSA.",
+    "patch_update_available": "A patch update ({{version}}) is available for Meerkat DSA.",
     "terminating_ob": "Terminating operational binding {{id}} at {{time}}.",
     "error_closing_connection": "{{ctype}} {{cid}}: Error closing {{transport}} connection: {{e}}.",
     "connection_unbound": "{{ctype}} {{cid}}: {{protocol}} connection unbound.",
@@ -45,5 +50,6 @@
     "password_changed": "Connection {{cid}} changed the password for entry {{uuid}}.",
     "change_password_incorrect": "Connection {{cid}} supplied an incorrect password to changePassword operation on entry {{uuid}}.",
     "family_subset_had_zero_members": "Family subset had zero members. This is not supposed to ever happen.",
-    "invalid_init_js": "Invalid MEERKAT_INIT_JS file. It must export a function named 'init' or 'default'."
+    "invalid_init_js": "Invalid MEERKAT_INIT_JS file. It must export a function named 'init' or 'default'.",
+    "bulk_insert_mode": "You are running Meerkat DSA in bulk insert mode. This means that almost no schema validation or access controls will apply."
 }
