Check that family members remain intact during modifyDN
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -106,5 +106,6 @@
     "cannot_add_obsolete_attr": "The following attributes are obsolete, and therefore may not be added to an entry: {{oids}}",
     "only_one_sort_key": "Sorted search and list operations may only use one sort key in this DSA.",
     "unsupported_familygrouping": "Unsupported familyGrouping option.",
-    "child_cannot_be_in_hierarchy": "Child member of a compound entry may not be in a hierarchical group."
+    "child_cannot_be_in_hierarchy": "Child member of a compound entry may not be in a hierarchical group.",
+    "cannot_move_child": "Cannot move child entry, because it would break a compound entry."
 }
