Finish all errors
Signed-off-by: Jonathan M. Wilbur <jonathan@wilbur.space>

--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -118,5 +118,7 @@
     "not_allowed_on_rdn": "Modification would affect the RDN.",
     "no_such_hierarchy_parent": "No such hierarchy parent.",
     "parent_not_ancestor": "Hierarchy parent was not the ancestor of the compound entry of which it is a part.",
-    "unsupported_auth_method": "Unsupported authentication method."
+    "unsupported_auth_method": "Unsupported authentication method.",
+    "alias_problem": "Alias did not point to an existing entry.",
+    "no_such_attribute_or_value": "The entry did not possess the selected values."
 }
