--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -45,7 +45,8 @@
     "no_root_dse": "No root DSE found. Creating it.",
     "created_root_dse": "Created root DSE {{uuid}}.",
     "dit_loaded": "DIT loaded into memory.",
-    "malformed_ldapmessage": "Malformed LDAPMessage.",
+    "malformed_ldapmessage": "Malformed LDAPMessage from client {{uuid}}.",
+    "encoding_error": "Invalid encoding from client {{uuid}}.",
     "entry_has_unrecognized_object_class": "Entry has unrecognized object class {{oid}}. It's required and optional attributes cannot be known.",
     "password_changed": "Connection {{cid}} changed the password for entry {{uuid}}.",
     "change_password_incorrect": "Connection {{cid}} supplied an incorrect password to changePassword operation on entry {{uuid}}.",
