--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -133,5 +133,7 @@
     "ob_invalid_version": "Proposed operational binding ID version is less than or equal to the most current version.",
     "failed_to_update_superior_dsa": "Failed to notify superior DSA of changes to the context prefix or one of its subentries.",
     "unrecognized_ldap_op": "Unrecognized LDAP operation.",
-    "cert_chain_no_certificates": "Certificate chain file '{{envvar}}' indicated by environment variable SIGNING_CERT_CHAIN had no PEM-encoded certificates."
+    "cert_chain_no_certificates": "Certificate chain file '{{envvar}}' indicated by environment variable SIGNING_CERT_CHAIN had no PEM-encoded certificates.",
+    "invalid_type_for_alter_values": "Attribute type {{oid}} is not permitted in alterValues modification.",
+    "could_not_connect": "Remote DSA is currently unavailable. Could not connect."
 }
