--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -135,5 +135,6 @@
     "unrecognized_ldap_op": "Unrecognized LDAP operation.",
     "cert_chain_no_certificates": "Certificate chain file '{{envvar}}' indicated by environment variable SIGNING_CERT_CHAIN had no PEM-encoded certificates.",
     "invalid_type_for_alter_values": "Attribute type {{oid}} is not permitted in alterValues modification.",
-    "could_not_connect": "Remote DSA is currently unavailable. Could not connect."
+    "could_not_connect": "Remote DSA is currently unavailable. Could not connect.",
+    "could_not_match_exactly": "Could not match exactly."
 }
