--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -141,5 +141,5 @@
     "could_not_match_exactly": "Could not match exactly.",
     "single_valued": "User supplied multiple values for single-valued attribute type {{oid}}.",
     "attribute_error_types": "Attribute error involving these attribute types: {{oids}}.",
-    "cannot_use_pagination_and_signing": "Pagination cannot be used if signed results are requested."
+    "cannot_use_pagination_and_signing": "Pagination cannot be used if signed results are requested unless the chainingProhibited option is set and the preferChaining option is unset."
 }
