--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -13,6 +13,7 @@
     "time_limit": "Could not complete operation within requested time limit.",
     "could_not_add_entry_to_remote_dsa": "Could not add entry to remote DSA specified as targetSystem.",
     "not_authz_to_add_entry": "Not authorized to add this entry.",
+    "not_authz_to_add_top_level": "Not authorized to add any entry to the top level.",
     "not_authz_to_create_attr_type": "Not authorized to create attribute of type {{type}}.",
     "not_authz_to_create_attr_value": "Not authorized to create one of the values of attribute type {{type}}.",
     "unrecognized_attribute_type": "Unrecognized attribute types: {{oids}}.",
@@ -129,7 +130,7 @@
     "superior_dsa_would_not_rename": "Superior DSA refused to allow RDN change to the subordinate context prefix. {{e}}",
     "could_not_find_cp": "Could not find context prefix associated with operational binding {{uuid}}.",
     "could_not_find_supr": "Could not find superior associated with operational binding {{uuid}}.",
-    "invalid_reference_no_reason_to_search_here": "Invalid reference: there is no context prefix under the target object, and therefore no reason to continue the search or list in this DSA.",
+    "invalid_reference_no_reason_to_search_here": "Invalid reference: there is no context prefix under the target object, and therefore no reason to continue the search or list in this DSA; alternatively, you may have set the manageDSAIT flag and the object simply does not exist in this DSA.",
     "cannot_reverse_roles_in_hob": "Cannot reverse roles in a hierarchical operational binding.",
     "ob_duplicate_identifier": "Proposed operational binding ID {{id}} is already taken.",
     "ob_invalid_version": "Proposed operational binding ID version is less than or equal to the most current version.",
