--- a/apps/meerkat/src/assets/locales/en/language/err.json
+++ b/apps/meerkat/src/assets/locales/en/language/err.json
@@ -142,5 +142,6 @@
     "single_valued": "User supplied multiple values for single-valued attribute type {{oid}}.",
     "attribute_error_types": "Attribute error involving these attribute types: {{oids}}.",
     "cannot_use_pagination_and_signing": "Pagination cannot be used if signed results are requested unless the chainingProhibited option is set and the preferChaining option is unset.",
-    "not_authz_read_selection": "Not authorized to read some of the selected attributes."
+    "not_authz_read_selection": "Not authorized to read some of the selected attributes.",
+    "not_authz_browse": "Not authorized to browse or return the distinguished name of this entry. Its existence was disclosed because of an error."
 }
