--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -63,5 +63,13 @@
     "continuing_name_resolution": "Continuing name resolution via DSP operation {{opid}}.",
     "received_chained_operation": "Received chained operation with identifier {{opid}} from connection {{cid}}.",
     "not_authz_to_add_top_level@hint": "To be able to add an entry to the top level in Meerkat DSA, the environment variable MEERKAT_OPEN_TOP_LEVEL must be set to '1', or there must be entries in this DSA with passwords, or you must be authenticated non-anonymously as an entry that has the boolean may_add_top_level_dse set. The first entry created in this DSA with a password will have this flag set automatically.",
-    "operation_progress_not_understood": "OperationProgress value {{value}} not understood from connection {{cid}}."
+    "operation_progress_not_understood": "OperationProgress value {{value}} not understood from connection {{cid}}.",
+    "timed_out_connecting_to_naddr": "Timed out binding to network address {{uri}}.",
+    "trying_naddr": "Trying to bind to network address {{uri}}.",
+    "bound_to_naddr": "Successfully bound to network address {{uri}}.",
+    "error_naddr": "Error binding to network address {{uri}}.",
+    "attempting_starttls": "Attempting STARTTLS with network address {{uri}}.",
+    "established_starttls": "Established STARTTLS with network address {{uri}}.",
+    "starttls_error@tls_optional": "Could not establish STARTTLS with network address {{uri}}. The connection will still be used, since TLS is optional. This was the error: {{e}}",
+    "starttls_error@tls_required": "Could not establish STARTTLS with network address {{uri}}. The connection will be discarded, since TLS is required. This was the error: {{e}}"
 }
