--- a/apps/meerkat/src/assets/locales/en/language/main.json
+++ b/apps/meerkat/src/assets/locales/en/language/main.json
@@ -1,4 +1,5 @@
 {
     "ping": "pong",
-    "success": "Success"
+    "success": "Success.",
+    "starttls_established": "StartTLS protection established."
 }
