--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -75,5 +75,6 @@
     "starttls_established": "StartTLS protection established for connection {{cid}}.",
     "received_ldap_request": "Received LDAP request of {{mid}} of type {{type}} from connection {{cid}}.",
     "abandon_ldap_op": "Abandoning LDAP operation from message {{mid}}.",
-    "abandoning_invocation_from_ldap": "Abandoning invocation {{iid}}, which corresponds to LDAP message {{mid}}."
+    "abandoning_invocation_from_ldap": "Abandoning invocation {{iid}}, which corresponds to LDAP message {{mid}}.",
+    "tcp_max_conn": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) has been reached."
 }
