--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -80,5 +80,6 @@
     "tcp_max_conn_per_addr": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) per address has been reached.",
     "buffer_limit": "TCP connection from {{source}} did or would have exceeded the configured {{protocol}} buffer size of {{size}} bytes. The socket will be closed.",
     "non_ldap_data": "TCP connection from {{source}} sent data that did not appear to be an LDAP message, judging by the first byte: 0x{{hexbyte}}.",
-    "slow_loris": "TCP connection from {{source}} sent data slower than {{bps}} bytes per second and was disconnected to prevent a Slow Loris attack."
+    "slow_loris": "TCP connection from {{source}} sent data slower than {{bps}} bytes per second and was disconnected to prevent a Slow Loris attack.",
+    "tcp_timeout": "TCP connection from {{source}} timed out after {{seconds}} of inactivity and was disconnected."
 }
