--- a/apps/meerkat/src/assets/locales/en/language/log.json
+++ b/apps/meerkat/src/assets/locales/en/language/log.json
@@ -74,16 +74,21 @@
     "starttls_error@tls_required": "Could not establish STARTTLS with network address {{uri}}. The connection will be discarded, since TLS is required. This was the error: {{e}}",
     "starttls_established@association": "Connection {{cid}} used StartTLS to enable TLS.",
     "starttls_established@transport": "TCP connection from {{source}} used StartTLS to enable TLS.",
-    "received_ldap_request": "Received LDAP request of {{mid}} of type {{type}} from connection {{cid}}.",
+    "received_ldap_request": "Received LDAP request {{mid}} of type {{type}} from connection {{cid}}.",
+    "received_request": "Received {{protocol}} request with invoke ID {{iid}} and operation {{op}} from connection {{cid}}.",
     "abandon_ldap_op": "Abandoning LDAP operation from message {{mid}}.",
     "abandoning_invocation_from_ldap": "Abandoning invocation {{iid}}, which corresponds to LDAP message {{mid}}.",
     "tcp_max_conn": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) has been reached.",
     "tcp_max_conn_per_addr": "TCP connection from {{source}} turned away because the maximum configured number of connections ({{max}}) per address has been reached.",
     "buffer_limit": "TCP connection from {{source}} did or would have exceeded the configured {{protocol}} buffer size of {{size}} bytes. The socket will be closed.",
+    "pdu_limit": "TCP connection from {{source}} did or would have exceeded the configured {{protocol}} PDU size of {{size}} bytes. The socket will be closed.",
+    "idm_segment_limit": "TCP connection from {{source}} did or would have exceeded the configured limit of {{limit}} IDM segments. The socket will be closed.",
     "non_ldap_data": "TCP connection from {{source}} sent data that did not appear to be an LDAP message, judging by the first byte: 0x{{hexbyte}}.",
     "slow_loris": "TCP connection from {{source}} sent data slower than {{bps}} bytes per second and was disconnected to prevent a Slow Loris attack.",
     "tcp_timeout": "TCP connection from {{source}} timed out after {{seconds}} of inactivity and was disconnected.",
     "double_starttls": "TCP connection from {{source}} attempted a double-StartTLS. This may have been attempted hacking.",
     "unusual_message_id": "LDAP message from {{source}} had an unusually large or negative message ID.",
-    "unusual_invoke_id": "IDM operation from connection {{cid}} from had an unusually large or negative invoke ID."
+    "unusual_invoke_id": "IDM operation from connection {{cid}} from had an unusually large or negative invoke ID.",
+    "dup_invoke_id": "Duplicated IDM invokeID {{iid}} from connection {{cid}}.",
+    "max_concurrent_op": "Connection {{cid}} maxed out the number of permitted concurrent operations. The operation with invoke ID {{iid}} was rejected."
 }
